--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-router-dom": "^4.1.1",
     "react-toolbox": "^2.0.0-beta.12"
   },
   "devDependencies": {
@@ -12,12 +13,6 @@
     "react-toolbox-themr": "^1.0.2"
   },
   "reactToolbox": {
-    "include": [
-      "APP_BAR",
-      "NAVIGATION",
-      "LINK",
-      "CARD"
-    ],
     "customProperties": {
       "animation-duration": "0.3s",
       "color-accent": "var(--palette-pink-a200)",
