--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "workout",
+  "homepage": "https://leetrunghoo.github.io/workout",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "gh-pages": "^1.0.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router-dom": "^4.1.1",
@@ -13,12 +15,20 @@
     "react-toolbox-themr": "^1.0.2"
   },
   "reactToolbox": {
+    "include": [
+      "APP_BAR",
+      "NAVIGATION",
+      "LINK",
+      "CARD",
+      "LAYOUT"
+    ],
     "customProperties": {
-      "animation-duration": "0.3s",
-      "color-accent": "var(--palette-pink-a200)",
-      "color-accent-dark": "var(--palette-pink-700)",
-      "color-primary-contrast": "var(--color-dark-contrast)",
-      "color-accent-contrast": "var(--color-dark-contrast)"
+      "color-primary": "#96B961",
+      "color-primary-dark": "#1D7324",
+      "color-accent": "#6BACB8",
+      "color-accent-dark": "#1F4B99",
+      "color-primary-contrast": "#fff",
+      "color-accent-contrast": "#fff"
     },
     "output": "src/theme/react-toolbox"
   },
@@ -27,6 +37,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "toolbox": "react-toolbox-themr"
+    "toolbox": "react-toolbox-themr",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
