--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "workout",
-  "homepage": "https://leetrunghoo.github.io/workout",
+  "homepage": "https://workout.leetrunghoo.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
